[gd_scene load_steps=30 format=3 uid="uid://ft61g3l6s3o5"]

[ext_resource type="Script" path="res://script/Characters/human.gd" id="1_hrcwk"]
[ext_resource type="Script" path="res://script/Components/health_component.gd" id="2_5ijb1"]
[ext_resource type="Script" path="res://script/Components/hitbox_component.gd" id="3_l017x"]
[ext_resource type="Script" path="res://script/Characters/head.gd" id="4_4qcog"]
[ext_resource type="Script" path="res://script/States/state_machine.gd" id="5_04y1s"]
[ext_resource type="Script" path="res://script/States/search.gd" id="6_3ww2t"]
[ext_resource type="Script" path="res://script/States/move_to_room.gd" id="7_14i34"]
[ext_resource type="Script" path="res://script/States/human_scared_state.gd" id="7_of7cu"]
[ext_resource type="Script" path="res://script/States/investigate.gd" id="8_ualvh"]
[ext_resource type="PackedScene" uid="uid://cs0odfmfb1okd" path="res://scenes/characters/progress_bar_3d.tscn" id="9_s0rcg"]
[ext_resource type="Script" path="res://script/States/can_see_power.gd" id="9_tiwvo"]
[ext_resource type="StyleBox" uid="uid://bf6aidr76cgva" path="res://materials/flat_health_style_box.tres" id="10_ymi3c"]
[ext_resource type="Texture2D" uid="uid://cgkeymjlh78e2" path="res://images/heart pixel art 32x32.png" id="11_lr7pq"]
[ext_resource type="StyleBox" uid="uid://bq34wo7s0f42x" path="res://materials/flat_fear_style_box.tres" id="12_nkdyu"]
[ext_resource type="Texture2D" uid="uid://cpebkvnsc5fwt" path="res://images/ghostIcon.png" id="13_fdbcn"]
[ext_resource type="Script" path="res://script/Components/sight_component.gd" id="14_hywin"]
[ext_resource type="Script" path="res://script/Components/fear_component.gd" id="15_eo7bl"]
[ext_resource type="Script" path="res://script/Components/suspicion_component.gd" id="16_1w0wc"]
[ext_resource type="Script" path="res://script/Components/listening_component.gd" id="17_5p8as"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ffojb"]
radius = 0.4
height = 1.8

[sub_resource type="CylinderMesh" id="CylinderMesh_0nw12"]
top_radius = 0.25
bottom_radius = 0.25
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_68rha"]
height = 1.0
radius = 0.25

[sub_resource type="SphereMesh" id="SphereMesh_ybo7m"]
radius = 0.25
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_rv4sy"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_xcilg"]
size = Vector3(1, 1, 20)

[sub_resource type="SphereShape3D" id="SphereShape3D_pxbg8"]
radius = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_exivy"]
height = 0.1
radius = 0.05

[sub_resource type="ViewportTexture" id="ViewportTexture_ftpct"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_shj73"]
viewport_path = NodePath("SubViewport")

[node name="Human" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 270
axis_lock_linear_z = true
slide_on_ceiling = false
script = ExtResource("1_hrcwk")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("healthBar")]
script = ExtResource("2_5ijb1")
healthBar = NodePath("../HealthBar")

[node name="Hitbox" type="Area3D" parent="." node_paths=PackedStringArray("suspicionComponent", "healthComponent", "fearComponent")]
collision_layer = 16
collision_mask = 9
script = ExtResource("3_l017x")
suspicionComponent = NodePath("../SuspicionComponent")
healthComponent = NodePath("../HealthComponent")
fearComponent = NodePath("../FearComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.209626, 0)
shape = SubResource("CapsuleShape3D_ffojb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_0nw12")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_68rha")

[node name="Head" type="MeshInstance3D" parent="." node_paths=PackedStringArray("sight")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.798623, 0)
mesh = SubResource("SphereMesh_ybo7m")
script = ExtResource("4_4qcog")
sight = NodePath("../SightComponent")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0124356, 0.047289, -0.314469)
mesh = SubResource("CylinderMesh_rv4sy")
skeleton = NodePath("../..")

[node name="Sight" type="Area3D" parent="Head"]
collision_layer = 16
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Sight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.281029, -10.2466)
shape = SubResource("BoxShape3D_xcilg")

[node name="RayCast3D" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -20)
collision_mask = 6

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00612593, 0.811755, 0)
shape = SubResource("SphereShape3D_pxbg8")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.00956057, 0.84843, -0.314469)
shape = SubResource("CylinderShape3D_exivy")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("5_04y1s")
initialState = NodePath("Search")

[node name="Search" type="Node" parent="StateMachine" node_paths=PackedStringArray("human", "text", "head")]
script = ExtResource("6_3ww2t")
human = NodePath("../..")
moveSpeed = 1.0
text = NodePath("../../Label3D")
head = NodePath("../../Head")

[node name="MoveToRoom" type="Node" parent="StateMachine" node_paths=PackedStringArray("human", "text")]
script = ExtResource("7_14i34")
human = NodePath("../..")
text = NodePath("../../Label3D")

[node name="Investigate" type="Node" parent="StateMachine" node_paths=PackedStringArray("human", "head")]
script = ExtResource("8_ualvh")
human = NodePath("../..")
head = NodePath("../../Head")

[node name="CanSeePower" type="Node" parent="StateMachine" node_paths=PackedStringArray("human", "text", "head")]
script = ExtResource("9_tiwvo")
human = NodePath("../..")
text = NodePath("../../Label3D")
head = NodePath("../../Head")

[node name="Scared" type="Node" parent="StateMachine" node_paths=PackedStringArray("text", "human")]
script = ExtResource("7_of7cu")
text = NodePath("../../Label3D")
human = NodePath("../..")

[node name="HealthBar" parent="." instance=ExtResource("9_s0rcg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24372, 0)
texture = SubResource("ViewportTexture_ftpct")
styleBox = ExtResource("10_ymi3c")

[node name="Sprite3D" type="Sprite3D" parent="HealthBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0519953, 0)
offset = Vector2(-70, 0)
billboard = 1
texture = ExtResource("11_lr7pq")

[node name="FearBar" parent="." instance=ExtResource("9_s0rcg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52667, 0)
texture = SubResource("ViewportTexture_shj73")
initialValue = 0.0
styleBox = ExtResource("12_nkdyu")

[node name="Sprite3D" type="Sprite3D" parent="FearBar"]
offset = Vector2(-350, 0)
pixel_size = 0.002
billboard = 1
texture = ExtResource("13_fdbcn")

[node name="SightComponent" type="Node" parent="." node_paths=PackedStringArray("rayCast", "head")]
script = ExtResource("14_hywin")
rayCast = NodePath("../Head/RayCast3D")
head = NodePath("../Head")

[node name="FearComponent" type="Node" parent="." node_paths=PackedStringArray("fearBar")]
script = ExtResource("15_eo7bl")
fearBar = NodePath("../FearBar")

[node name="SuspicionComponent" type="Node" parent="."]
script = ExtResource("16_1w0wc")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91189, -0.0150942)
billboard = 1
font_size = 80

[node name="ListeningComponent" type="Node" parent="."]
script = ExtResource("17_5p8as")

[connection signal="body_entered" from="Head/Sight" to="SightComponent" method="_on_sight_body_entered"]
[connection signal="canSeePower" from="SightComponent" to="FearComponent" method="_on_sight_component_can_see_power"]
[connection signal="canSeePower" from="SightComponent" to="SuspicionComponent" method="_on_sight_component_can_see_power"]
